2005-07-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* configure.in (reloc_b): add --enable-static-gxx to statically
	link to libstdc++

	* lily/GNUmakefile (static-gxx-libs): new target
	static-gxx-libs. Create  link to libstdc++.a

	* lily/new-lyric-combine-music-iterator.cc: rename to Lyric_combine_music_iterator

	* lily/lyric-combine-music-iterator.cc
	(Old_lyric_combine_music_iterator): rename to Old_lyric_combine_music_iterator

	* lily/*-engraver.cc (various): remove double use of
	PRECOMPUTED_VIRTUAL function: only use
	start_translation_timestep() and stop_translation_timestep(), not
	both.

	* lily/break-substitution.cc (fast_substitute_grob_array): do
	fast_substitute_grob_array for all unordered grob_arrays.
	(substitute_grob): return Grob *. Saves packing/unpacking SCMs.
	(substitute_grob_array): optimize.

	* lily/align-interface.cc (set_axis): set ordered_ for 'elements

	* lily/include/grob-array.hh (class Grob_array): ordered_ member.

	* lily/parser.yy: revert $globalheader patch.
	
	* lily/include/translator.icc
	(IMPLEMENT_FETCH_PRECOMPUTABLE_METHODS): directly jump into
	Translator methods, without _static helper.
 
	* lily/grob-smob.cc (derived_mark): rename from
	do_derived_mark(). Return void.

	* scm/define-context-properties.scm
	(all-internal-translation-properties): remove tweakCount/tweakRank.

	* scm/output-lib.scm (begin-of-line-invisible): use vectors for
	predefined break-visibilities.

	* lily/item.cc (handle_prebroken_dependencies): use a vector of 3
	booleans for break-visibility.

	* Documentation/topdocs/NEWS.tely (Top): add note about engravers.

	* python/convertrules.py (conv): rule for Timing_translator. 

	* lily/include/translator.icc: new file. 

	* lily/paper-column-engraver.cc (process_music): new
	file. Separate Paper_column factory from Score_engraver.

	* lily/vertically-spaced-context-engraver.cc: administer
	spaceable-staves property of System.

	* lily/translator-group-ctors.cc: new file.
