@@ -211,7 +211,9 @@ r"""%% LilyPond file to list all font symbols and the corresponding names
 
 		file.write ('''    \\markup { \\raise #0.75 \\vcenter
 	      \\musicglyph #"%s"
-	      \\typewriter " %s" } 4\n''' % (scm_string, scm_string))
+	      \\typewriter " %s" } 4
+	      \\noBreak
+	      ''' % (scm_string, scm_string))
 
 		if (count % per_line) == 0:
 			file.write ('    \\skip 8 \\break\n')
